# ComplainSystem

./: alembic.ini  pyproject.toml
app/: constants.py  main.py
app/api/api_v1/: routes.py
app/api/api_v1/endpoints/: complaint.py  login.py  user.py
app/core/: auth.py  config.py
app/crud/: crud_complaint.py  crud_user.py
app/db/: init_db.py
app/models/: __init__.py  complaint.py  user.py
app/schemas/: complaint_schema.py  user_schema.py
app/scripts/: create_super_user.py
app/services/: s3.py  ses.py
migrations/: env.py
migrations/versions/: 2b0d8484b3c6_initial.py  d87259c54e9e_add_phone.py
