[tool.poetry]
name = "complainsystem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.97.0"}
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
databases = "^0.7.0"
alembic = "^1.11.1"
pyjwt = "^2.7.0"
python-decouple = "^3.8"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
asyncclick = "^8.1.3.4"
boto3 = "^1.26.165"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
